[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.3327
margin_top = 1.16635
margin_right = 2.33276
margin_bottom = 1.16638
script = ExtResource( 1 )

[node name="ConsoleBg" type="ColorRect" parent="."]
margin_left = -2.0
margin_top = 516.0
margin_right = 1022.0
margin_bottom = 599.0
color = Color( 0, 0, 0, 1 )

[node name="Output" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 347.0
margin_right = 1011.0
margin_bottom = 515.0
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false

[node name="Input" type="LineEdit" parent="."]
margin_left = 9.0
margin_top = 524.0
margin_right = 1012.0
margin_bottom = 590.0
custom_fonts/font = ExtResource( 2 )
caret_blink = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
[connection signal="text_entered" from="Input" to="." method="_on_Input_text_entered"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
